--- a/lab-1/src/components/Main/Main.css
+++ b/lab-1/src/components/Main/Main.css
@@ -73,5 +73,6 @@
     padding: 10px;
     border: solid black 1px;
     width: calc(100% - 40px);
-    height: 200px;
+    text-align: center;
+    min-height: 200px;
 }
